[gd_scene load_steps=20 format=2]

[ext_resource path="res://resources/scripts/GamePlay.gd" type="Script" id=1]
[ext_resource path="res://resources/scripts/GameBackground.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/gamefonts/RADIOLAND.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/scripts/ScoreLabel.gd" type="Script" id=5]
[ext_resource path="res://resources/icon/coin.png" type="Texture" id=6]
[ext_resource path="res://resources/gamefonts/Pacifico.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://resources/scripts/InstantCoinCount.gd" type="Script" id=8]
[ext_resource path="res://pausebutton.tres" type="StyleBox" id=9]
[ext_resource path="res://resources/icon/pause.png" type="Texture" id=10]
[ext_resource path="res://resources/gamefonts/starcraft.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1930, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 1080 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.3777, 1500 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.776471, 0.713726, 0.0509804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 11 )

[node name="GamePlay" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBackground" type="Sprite" parent="Control"]
centered = false
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]

[node name="Player" parent="Control" instance=ExtResource( 3 )]

[node name="ScoreLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 100.0
margin_right = 258.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.701961, 0.0431373, 1 )
text = "0"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control"]

[node name="TopWall" type="StaticBody2D" parent="Control" groups=[
"wall",
]]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/TopWall"]
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="Control" groups=[
"wall",
]]
position = Vector2( 6.34961, 1073.08 )
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/BottomWall"]
shape = SubResource( 2 )

[node name="EndWall" type="StaticBody2D" parent="Control" groups=[
"end_wall",
]]
collision_layer = 128
collision_mask = 541

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/EndWall"]
shape = SubResource( 3 )

[node name="StartWall" type="StaticBody2D" parent="Control" groups=[
"start_wall",
]]
position = Vector2( 1928.03, -11.2246 )
collision_layer = 256
collision_mask = 515

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/StartWall"]
position = Vector2( -0.120972, -9.59349 )
shape = SubResource( 4 )

[node name="BoulderTimer" type="Timer" parent="Control"]

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 54.0151, 184.934 )
scale = Vector2( 0.631285, 0.6108 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="Control"]
margin_left = 124.0
margin_top = 147.0
margin_right = 671.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0313726, 0.701961, 0.0431373, 1 )
text = "0"
script = ExtResource( 8 )

[node name="PauseButton" type="Button" parent="Control"]
pause_mode = 2
margin_left = 50.0
margin_top = 31.0
margin_right = 225.0
margin_bottom = 156.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="Control/PauseButton"]
visible = false
margin_left = 99.8346
margin_top = 319.248
margin_right = 1614.83
margin_bottom = 501.248
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0313726, 0.701961, 0.0431373, 1 )
text = "PRESS BUTTON TO CONTINUE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 12 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/9703314252"
interstitial_id = "ca-app-pub-9093002613352397/4401642844"
rewarded_id = "ca-app-pub-9093002613352397/2049127463"
[connection signal="timeout" from="Control/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/BoulderTimer" to="." method="_on_BoulderTimer_timeout"]
[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
